--- a/templates/accounts/form.html
+++ b/templates/accounts/form.html
@@ -1,7 +1,18 @@
-<form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit">
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+{% load static %}
+<header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+</header>
+
+<div class="form">
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+        </table>
+        <input type="submit" value="submit">
+    </form>
+</div>
+
+{% endblock %}
