--- a/templates/accounts/form.html
+++ b/templates/accounts/form.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 {% load static %}
-<header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
-</header>
 
 <div class="form">
     <form action="" method="post" enctype="multipart/form-data">
@@ -11,7 +9,7 @@
         <table>
             {{ form.as_table }}
         </table>
-        <input type="submit" value="submit">
+        <input type="submit" value="확인">
     </form>
 </div>
 
