--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+
+{% block content %}
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>프로필</title>
 </head>
-<body>
+<body class="profile_body">
     <h1>프로필 페이지입니다.</h1>
-    <p>{{user}}의 프로필 페이지입니다.</p>
+    <p>{{user}} 님의 프로필 페이지입니다.</p>
+    <p class="card-text">가입날짜: {{user.date_joined}} </p>
+    <p class="card-text">닉네임: {{usercharacter}}</p>
 </body>
 </html>
+{% endblock %}
