--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -9,6 +9,7 @@
                     <div class="row">
 
                             <!-- Blog post-->
+                            
                         {% for post in object_list %}
                             <div class="col-lg-6">
                                 <div class="card mb-4">
@@ -43,13 +44,17 @@
                 </div>
                 <!-- Side widgets-->
                 <div class="col-lg-4">
+                    <div class="card md-4">
+                        <a class="btn btn-primary" href="{% url 'blog:post_new' %}">글 쓰기</a>
+                    </div>
+                    <br>
                     <!-- Search widget-->
                     <div class="card mb-4">
                         <div class="card-header">Search</div>
                         <div class="card-body">
                             <form action="" method="GET">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" name="q" value="{{ request.GET.q }}"/>
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                                <input class="form-control" type="text" placeholder="검색 할 내용을 입력하세요." name="q" value="{{ request.GET.q }}"/>
+                                <button class="btn btn-primary" id="button-search" type="submit">검색</button>
                             </form>
                         </div>
                     </div>
@@ -83,30 +88,5 @@
                 </div>
             </div>
         </div>
-<ul>
-    {% for post in post_list %}
-    <li>
-        <a href="{% url 'blog:post_detail' post.pk %}">
-            {{ post.title }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
-<a href="{% url 'blog:post_new' %}">업로드</a>
 
-<ul>
-    {% for post in posts %}
-        <li>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-            <ul>
-                Tags:
-                {% for tag in post.tags.all %}
-                    <li><a href="{% url 'tag_posts' tag_name=tag.name %}">{{ tag.name }}</a></li>
-                {% endfor %}
-            </ul>
-        </li>
-    {% empty %}
-        <p>게시물이 없습니다.</p>
-    {% endfor %}
-</ul>
 {% endblock %}
