STYLE: html, forms

--- a/templates/blog/form.html
+++ b/templates/blog/form.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+{% load static %}
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <table>
@@ -5,3 +9,4 @@
     </table>
     <input type="submit" value="Submit">
 </form>
+{% endblock %}
