--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -8,10 +8,9 @@
     <title>프로필</title>
 </head>
 <body class="profile_body">
-    <h1>프로필 페이지입니다.</h1>
+    <h1>프로필 페이지</h1>
     <p>{{user}} 님의 프로필 페이지입니다.</p>
     <p class="card-text">가입날짜: {{user.date_joined}} </p>
-    <p class="card-text">닉네임: {{usercharacter}}</p>
 </body>
 </html>
 {% endblock %}
