--- a/templates/blog/post_confirm_delete.html
+++ b/templates/blog/post_confirm_delete.html
@@ -1,4 +1,7 @@
+{% extends 'base.html' %}
 
+{% block content %}
+{% load static %}
 <h1>글 삭제</h1>
 
 <form method="post">
@@ -6,3 +9,4 @@
     <p>글을 삭제하시겠습니까?</p>
     <input type="submit" value="네!" class="btn btn-primary">
 </form>
+{% endblock %}
