--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -7,9 +7,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
-
-                            <!-- Blog post-->
-                            
+                        
                         {% for post in object_list %}
                             <div class="col-lg-6">
                                 <div class="card mb-4">
@@ -83,7 +81,7 @@
                     <!-- Side widget-->
                     <div class="card mb-4">
                         <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                        <div class="card-body"></div>
                     </div>
                 </div>
             </div>
